fix popup on mobile

--- a/src/assets/styles/components/_popup.scss
+++ b/src/assets/styles/components/_popup.scss
@@ -131,7 +131,7 @@
   @apply transition-transform duration-500 will-change-transform h-full fixed top-0 right-0 translate-x-full pt-5 px-4 md:pt-8 md:px-10 pb-0 xl:p-[100px] bg-white max-w-full md:max-w-[550px] xl:max-w-[674px] z-[140] shadow-[10px_0_30px_rgba(0,0,0,0.15)]
 }
 
-@media(max-width:414px) and (max-height:812px) {
+@media(max-width:414px) {
   .popup {
     &__form {
       @apply overflow-y-auto max-h-[calc(100vh-40px)]
